car-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-app
  namespace: car-app
  labels:
    app: car-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3001
      targetPort: http
      protocol: TCP
  selector:
    app: car-app
